--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ body {
 .search-container input {
   height: 43px;
   width: 600px;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 4px;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
   border: none;
   font-size: 16px;
   padding: 0 10px;
@@ -81,13 +81,14 @@ body {
 #search-btn {
   background: #f2711c;
   height: 43px;
+  width: 80px;
   color: #fff;
   border: none;
   font-size: 15px;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   position: relative;
-  top: -1px;
+  top:1px
 }
 .main {
   width: 70%;
